--- a/HTML/back.html
+++ b/HTML/back.html
@@ -5,7 +5,7 @@
     </head>
 
     <body>
-        <img src="http://150.158.146.95:8888/chess.png" alt="仅供观赏">
+        <img src="http://150.158.146.95:8888/flag.png" alt="仅供观赏">
         <button onclick="window.location.href='http://150.158.146.95:8888'">重返游戏</button>
     </body>
 </html>
